# slide-captcha

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
generator/: captcha_generator.py  config.py
slide_captcha/: slide.py
yolo/: data.yaml  export.py  onnx.py  onnx1.py  slider-captcha.ipynb  test.py  test2.py  train.py
