[tool.poetry]
name = "slider-captcha"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.7.2"
ultralytics = "^8.0.178"
onnxruntime = "^1.15.1"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pillow = "^10.0.0"
onnx = "^1.14.1"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"